--- a/BackgroundEasy/View/CreateEditPresetWindow.xaml
+++ b/BackgroundEasy/View/CreateEditPresetWindow.xaml
@@ -25,7 +25,7 @@
         Width="300" Height="240"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner"
             
         mc:Ignorable="d"
-        Title="{Binding WindowTitle}" >
+        Title="Save Preset" >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -33,7 +33,7 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,16,4" Height="48">
             <Button IsCancel="True" Content="Cancel" Margin="0,0,8,0" Style="{StaticResource MiCancellationActionButtonStyle}" Command="{Binding CancelCommand}" />
-            <Button IsDefault="True" Content="Save" Command="{Binding CreateCommand}" Margin="8,0,0,0"/>
+            <Button IsDefault="True" Content="Save" Command="{Binding CreateCommand}" materialDesign:ShadowAssist.ShadowDepth="Depth0"   Style="{StaticResource WisImportBut}"  Margin="8,0,0,0"/>
         </StackPanel>
         <Grid Margin="16">
             <Grid.RowDefinitions>
